# systemd-gpio

./: .gitignore  README.md  README.rst  gpio@.service  pyproject.toml  python-systemd-gpio_0.0.1.orig.tar.gz.delta  python-systemd-gpio_0.0.1.orig.tar.gz.id  python-systemd-gpio_0.0.2.orig.tar.gz.delta  python-systemd-gpio_0.1.0.orig.tar.gz.delta  python-systemd-gpio_0.1.0.orig.tar.gz.id  systemd_gpio.py
.github/workflows/: debian.yml  publish.yml  pull_request.yml
debian/: changelog  control  copyright  gbp.conf  python3-systemd-gpio.dirs  python3-systemd-gpio.gpio@.service  python3-systemd-gpio.manpages  rules  watch
