[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "systemd-gpio"
authors = [
    {name = "Leo Singer", email = "leo.p.singer@nasa.gov"},
]
description = "Use systemd to configure commands to run when a GPIO button is pressed on a Raspberry Pi"
readme = "README.md"
requires-python = ">= 3.8"
license = {text = "Apache-2.0"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Operating System :: POSIX :: Linux",
    "Topic :: Home Automation",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Embedded Systems",
    "Topic :: System :: Boot :: Init",
]
dependencies = [
    "click",
    "gpiozero",
]
dynamic = ["version"]

[project.scripts]
systemd-gpio = "systemd_gpio:main"

[tool.setuptools]
py-modules = ["systemd_gpio"]

[tool.setuptools_scm]
